# automated-log-analysis-system

./: .gitignore  README.md
backend/: .env.example  .gitignore  API_DOCS.md  create_index.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  utils.py
backend/app/models/: project.py  user.py
backend/app/parsers/: log_parser.py
backend/app/rag/: chat.py  clients.py  ingest.py
backend/app/routes/: auth_routes.py  project_routes.py
backend/app/services/: alert_engine.py  auth_service.py  project_service.py
frontend/: .cta.json  .gitignore  components.json  package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/components/: CreateProjectForm.tsx  Header.tsx  ProjectList.tsx
frontend/src/components/ui/: dotted-glow-background.tsx  dotted-glow-card.tsx  interactive-hover-button.tsx
frontend/src/routes/: __root.tsx  alerts.tsx  index.tsx  login.tsx  logs.tsx  project-logs.$projectId.tsx  project.$projectId.tsx  projects.tsx  register.tsx
src/: App.tsx
